--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,22 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
+    <ion-title>Buscar CEP</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content class="ion-padding">
+  <ion-item>
+    <ion-label position="floating">Digite o CEP</ion-label>
+    <ion-input type="text" [(ngModel)]="cep" maxlength="8"></ion-input>
+  </ion-item>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+  <ion-button expand="block" (click)="buscarCep()">Buscar</ion-button>
+
+  <div *ngIf="resultado">
+    <h2>Resultado:</h2>
+    <p><strong>Logradouro:</strong> {{ resultado.logradouro }}</p>
+    <p><strong>Bairro:</strong> {{ resultado.bairro }}</p>
+    <p><strong>Cidade:</strong> {{ resultado.localidade }}</p>
+    <p><strong>Estado:</strong> {{ resultado.uf }}</p>
   </div>
 </ion-content>
